Trae comunidades usuario, falta ver como tomar la opcion del select